--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>TravelVista</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="./assets/css/spapp.css">
 <link rel="stylesheet" href="style.css">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="w3-light-grey">
 
 <!-- Navigation Bar -->
-<div class="w3-bar w3-white w3-border-bottom w3-xlarge">
-  <a href="#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>Logo</b></a>
-  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
+<div class="w3-bar w3-white w3-border-bottom w3-xlarge" id="navbar">
+  <a href="index.html" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>TravelVista</b></a>
+  <a href="#" id="theme-switcher" class="w3-bar-item w3-button w3-right w3-text-grey" onclick="toggleTheme()"><i class="fa fa-adjust"></i></a>
+  <a href="#faq" class="w3-bar-item w3-button w3-text-red w3-hover-red w3-large" style="margin-top: 5px;">FAQ</a>
+  <a href="#signup" class="w3-bar-item w3-button w3-text-red w3-hover-red w3-large" style="margin-top: 5px;">Sign up</a>
 </div>
 
 <!-- Header -->
-<header class="w3-content w3-hide-small" style="max-width:1500px">
+
+<header class="w3-display-container w3-content w3-hide-small" id="header" style="max-width:1500px">
   <img class="w3-image" src="/w3images/london2.jpg" alt="London" width="1500" height="700">
   <div class="w3-display-middle" style="width:65%">
     <div class="w3-bar w3-black">
@@ -28,36 +32,45 @@
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Car');"><i class="fa fa-car w3-margin-right"></i>Rental</button>
     </div>
 
-    <!-- Tabs -->
-    <div id="Flight" class="w3-container w3-white w3-padding-16 myLink">
-      <h3>Travel the world with us</h3>
-      <div class="w3-row-padding" style="margin:0 -16px;">
-        <div class="w3-half">
+ <!-- Tabs -->
+
+<div id="Flight" class="w3-container w3-white w3-padding-16 myLink toggle-theme">
+  <h3>Travel the world with us</h3>
+  <div class="w3-row-padding" style="margin:0 -16px;">
+      <div class="w3-half">
           <label>From</label>
-          <input class="w3-input w3-border" type="text" placeholder="Departing from">
-        </div>
-        <div class="w3-half">
-          <label>To</label>
-          <input class="w3-input w3-border" type="text" placeholder="Arriving at">
-        </div>
+          <input class="w3-input w3-border" type="text" id="departingFrom" placeholder="Departing from">
       </div>
-      <p><button class="w3-button w3-dark-grey">Search and find dates</button></p>
-    </div>
-
-    <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink">
-      <h3>Find the best hotels</h3>
-      <p>Book a hotel with us and get the best fares and promotions.</p>
-      <p>We know hotels - we know comfort.</p>
-      <p><button class="w3-button w3-dark-grey">Search Hotels</button></p>
-    </div>
-
-    <div id="Car" class="w3-container w3-white w3-padding-16 myLink">
-      <h3>Best car rental in the world!</h3>
-      <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world with CarServiceRentalRUs</p>
-      <input class="w3-input w3-border" type="text" placeholder="Pick-up point">
-      <p><button class="w3-button w3-dark-grey">Search Availability</button></p>
-    </div>
+      <div class="w3-half">
+          <label>To</label>
+          <input class="w3-input w3-border" type="text" id="arrivingAt" placeholder="Arriving at">
+      </div>
   </div>
+  <!-- Add the date input here -->
+  <div class="w3-row-padding" style="margin:0 -16px;">
+      <div class="w3-half">
+          <label>Date of departure</label>
+          <input class="w3-input w3-border" type="date">
+      </div>
+  </div>
+  <p><button id="flightSearchBtn" class="w3-button w3-dark-grey">Search and find dates</button></p>
+</div>
+
+
+<div id="Hotel" class="w3-container w3-white w3-padding-16 myLink">
+  <h3>Find the best hotels</h3>
+  <p>Book a hotel with us and get the best fares and promotions.</p>
+  <p>We know hotels - we know comfort.</p>
+  <p><a href="https://www.booking.com/" target="_blank"><button class="w3-button w3-dark-grey">Search Hotels</button></a></p>
+</div>
+
+<div id="Car" class="w3-container w3-white w3-padding-16 myLink">
+  <h3>Best car rental in the world!</h3>
+  <p><span class="w3-tag w3-deep-orange">DISCOUNT!</span> Special offer if you book today: 25% off anywhere in the world with CarServiceRentalRUs</p>
+   <input class="w3-input w3-border" type="text" id="pickupPoint" placeholder="Pick-up point">
+   <p><button class="w3-button w3-dark-grey" id="carSearchBtn">Search Availability</button></p>
+</div>
+</div>
 </header>
 
 <!-- Page content -->
@@ -108,14 +121,14 @@
   </div> 
 
   <!-- Explore Nature -->
-  <div class="w3-container">
+  <div class="w3-container ">
     <h3>Explore Nature</h3>
     <p>Travel with us and see nature at its finest.</p>
   </div>
-  <div class="w3-row-padding">
+  <div class="w3-row-padding" >
     <div class="w3-half w3-margin-bottom">
       <img src="/w3images/ocean2.jpg" alt="Norway" style="width:100%">
-      <div class="w3-container w3-white">
+      <div class="w3-container w3-white toggle-theme">
         <h3>West Coast, Norway</h3>
         <p class="w3-opacity">Roundtrip from $79</p>
         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
@@ -124,7 +137,7 @@
     </div>
     <div class="w3-half w3-margin-bottom">
       <img src="/w3images/mountains2.jpg" alt="Austria" style="width:100%">
-      <div class="w3-container w3-white">
+      <div class="w3-container w3-white toggle-theme">
         <h3>Mountains, Austria</h3>
         <p class="w3-opacity">One-way from $39</p>
         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
@@ -133,17 +146,17 @@
     </div>
   </div>
 
-  <!-- Newsletter -->
-  <div class="w3-container">
-    <div class="w3-panel w3-padding-16 w3-black w3-opacity w3-card w3-hover-opacity-off">
-      <h2>Get the best offers first!</h2>
-      <p>Join our newsletter.</p>
-      <label>E-mail</label>
-      <input class="w3-input w3-border" type="text" placeholder="Your Email address">
-      <button type="button" class="w3-button w3-red w3-margin-top">Subscribe</button>
-    </div>
-  </div>
-  
+<br>
+
+<main id="spapp" role="main">
+  <section id="faq" data-load="faq.html">
+  </section>
+  <section id="signup" data-load="signup.html">
+  </section>
+</main>
+
+<br>
+
   <!-- Contact -->
   <div class="w3-container">
     <h2>Contact</h2>
@@ -151,21 +164,20 @@
     <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
     <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
     <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-    <form action="/action_page.php" target="_blank">
+    <form id="contactForm" method="post"  action="">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p><button class="w3-button w3-black w3-padding-large" type="submit">SEND MESSAGE</button></p>
+      <p><button class="w3-button w3-black w3-padding-large toggle-theme" type="submit">SEND MESSAGE</button></p>
     </form>
   </div>
   
-<!-- End page content -->
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-center w3-opacity w3-margin-bottom">
   <h5>Find Us On</h5>
-  <div class="w3-xlarge w3-padding-16">
+  <div class="w3-xlarge w3-padding-10">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
@@ -179,7 +191,7 @@
 <!-- Modal 1 -->
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content toggle-theme">
         <div class="modal-header">
           <h5 class="modal-title" id="modal1Label">Cinque Terre, Italy</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -205,7 +217,7 @@
   <!-- Modal 2 -->
   <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content toggle-theme">
         <div class="modal-header">
           <h5 class="modal-title" id="modal2Label">New York, New York</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -231,7 +243,7 @@
   <!-- Modal 3 -->
   <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="modal3Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content toggle-theme">
         <div class="modal-header">
           <h5 class="modal-title" id="modal3Label">San Francisco, Callifornia</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -257,7 +269,7 @@
   <!-- Modal 4 -->
   <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="modal4Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content toggle-theme">
         <div class="modal-header">
           <h5 class="modal-title" id="modal4Label">Pisa, Italy</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -283,7 +295,7 @@
   <!-- Modal 5 -->
   <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="modal5Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content toggle-theme">
         <div class="modal-header">
           <h5 class="modal-title" id="modal5Label">Paris, France</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -305,30 +317,46 @@
       </div>
     </div>
   </div>
-  <!-- Bootstrap JS (jQuery required) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<!-- Bootstrap Error Toast -->
+<div class="toast toast-error" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000" style="position: fixed; top: 20px; right: 20px; background-color: rgba(255, 0, 0, 0.7); color: white;">
+  <div class="toast-header">
+      <strong class="mr-auto">Error</strong>
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  <div class="toast-body">
+      Invalid city. Please enter a major city.
+  </div>
+</div>
+
+<!-- Bootstrap Success Toast -->
+<div class="toast toast-success" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000" style="position: fixed; top: 20px; right: 20px; background-color: rgba(68, 255, 0, 0.7); color: white;">
+  <div class="toast-header">
+      <strong class="mr-auto">Success</strong>
+      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  <div class="toast-body">
+      Input successfull!
+  </div>
+</div>
+
+
+<!-- jQuery and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script>
-    // Tabs
-    function openLink(evt, linkName) {
-      var i, x, tablinks;
-      x = document.getElementsByClassName("myLink");
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      tablinks = document.getElementsByClassName("tablink");
-      for (i = 0; i < x.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
-      }
-      document.getElementById(linkName).style.display = "block";
-      evt.currentTarget.className += " w3-red";
-    }
-    
-    // Click on the first tablink on load
-    document.getElementsByClassName("tablink")[0].click();
-    </script>
+<!-- jQuery SPA Plugin -->
+<script src="./assets/js/jquery.spapp.js"></script>
+<script src="./assets/js/jquery.spapp.min.js"></script>
+
+<!-- Custom JS -->
+<script src="script.js"></script>
+
 
 </body>
 </html>
